--- a/index.html
+++ b/index.html
@@ -50,6 +50,29 @@
 
   <ul id="donorList"></ul>
 
+  <div class="container d-flex flex-wrap  justify-content-between gap-3 p-3">
+    <div class="card p-3" style="width: 250px;">
+        <h4><b>Hunger in N.E Kenya</b></h4>
+        <p>Donations for food supplies</p>
+        <button class="btn btn-danger">Donate</button>
+    </div>
+    <div class="card p-3" style="width: 250px;">
+        <h4><b>Floods in Kisumu</b></h4>
+        <p>Donations for food supplies</p>
+        <button class="btn btn-danger">Donate</button>
+    </div>
+    <div class="card p-3" style="width: 250px;">
+        <h4><b>Red Cross</b></h4>
+        <p>Donations for emergency services</p>
+        <button class="btn btn-danger">Donate</button>
+    </div>
+    <div class="card p-3" style="width: 250px;">
+        <h4><b>Orphanages</b></h4>
+        <p>Donations for supplies</p>
+        <button class="btn btn-danger">Donate</button>
+    </div>
+</div>
+
   <footer>
     <div class="container justify-content-end d-flex">
       <div class="container">
@@ -71,5 +94,6 @@
   </footer>
 
   <script src="index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
